Delete entry
