# backend/src/controllers/ServiceController.ts
@@ -2,7 +2,7 @@ import { FileParam, FormParam, GET, POST,  Path, QueryParam, PathParam } from "t
 import { Produces, Response } from "typescript-rest-swagger";
 import { BadRequestError } from "typescript-rest/dist/server/model/errors";
 import { CSVParser } from "../CSVParser";
-import { saveTable, theSaveData } from "../MongoFiles/Mongo";
+import { removeItem, saveTable, theSaveData } from "../MongoFiles/Mongo";
 import { correctLoginKey, userFromKey } from "../MongoFiles/MongoLogin";
 import { createAccount } from "../MongoFiles/MongoCreateAccount";
 import { getStockData } from "../stockapi";
@@ -143,15 +143,14 @@ export class ServiceController
 	{
 	    return await theSaveData();
 	}
-
-    /**
-	@Path("/getTableDB")
+	
+	/** Remove item specified by int id from (Frontend) SheetComponent.tsx **/
+	@Path("/removeTheItemGet")
 	@GET
-    public async getTableDB(@QueryParam("objId") objId: string) : Promise<any>
-    {
-        const retValue = getTableData(objId);
-        return await retValue;
-    }
-**/
+	public async removeTheItemGet(@QueryParam("item") item: number): Promise<void>
+	{
+	    console.log(`removeTheItemGet${  item}`);
+	    return await removeItem(item);
+	}
 
 }
