# backend/src/swagger/swagger.json
@@ -480,6 +480,36 @@
 				"description": "Get data from default stock table *",
 				"parameters": []
 			}
+		},
+		"/removeTheItemGet": {
+			"get": {
+				"operationId": "ServiceRemoveTheItemGet",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "Bad Request",
+						"schema": {
+							"$ref": "#/definitions/BadRequestError"
+						}
+					}
+				},
+				"description": "Whatever *",
+				"parameters": [
+					{
+						"description": "",
+						"in": "query",
+						"name": "item",
+						"required": true,
+						"type": "number",
+						"format": "double"
+					}
+				]
+			}
 		}
 	},
 	"swagger": "2.0",
